# AvionicsSystem

./: AvionicsSystem.cpp  AvionicsSystem.sln  AvionicsSystem.vcxproj  AvionicsSystem.vcxproj.filters  CMakeLists.txt  DataBase.cpp  DataLogger.cpp  DataLogger.h  FlightControl.cpp  FlightControl.h  GPSdata.h  GPSsim.cpp  GPSsim.h  README.md  SensorSim.cpp  SensorSim.h  UserInterface.cpp  UserInterface.h  WeatherData.h  WeatherSim.cpp  WeatherSim.h  fetch_gps_data.py  flight_log.txt  gps_data.json  random_gps_data.json  results.csv  run_ml_model.py  vcpkg.json
